--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Practice project</title>
+    <title>Synergist | Lagos Web Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/png" href="img/s-title-icon.png">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
   </head>
   <body>
